added guest and user ordering respectively

--- a/First Menu-guest.html
+++ b/First Menu-guest.html
@@ -29,7 +29,7 @@
 
   <div class="container main-container">
     <header>
-      <div class="back-btn-container"><a href="Stalls.html" class="back-btn">← Back</a></div>
+      <div class="back-btn-container"><a href="Stalls-guest.html" class="back-btn">← Back</a></div>
       <h1>🥗 Rojak, Popiah & Cockle</h1>
       <p class="subtitle">Authentic Singaporean Street Food Delights</p>
     </header>
@@ -51,7 +51,7 @@
       </section>
 
       <div class="checkout-section">
-        <a href="checkout.html" class="checkout-btn">Go to Checkout 🛒</a>
+        <a href="Checkout-guest.html" class="checkout-btn">Go to Checkout 🛒</a>
       </div>
     </main>
   </div>
