--- a/Stalls-guest.html
+++ b/Stalls-guest.html
@@ -33,10 +33,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" href="Stalls.html">Stalls</a>
+            <a class="nav-link active" href="Stalls-guest.html">Stalls</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="checkout.html">Checkout</a>
+            <a class="nav-link" href="Checkout-guest.html">Checkout</a>
           </li>
         </ul>
       </div>
@@ -63,14 +63,14 @@
         </fieldset>
       </section>
       <section class="stalls">
-        <a href="First Menu.html" class="stall-link">
+        <a href="First Menu-guest.html" class="stall-link">
           <article class="stall" data-category="veg" data-cuisine="malay">
             <img src="Stall Images/Rojak, Popiah & Cockle.webp" alt="Rojak, Popiah & Cockle">
             <p class="stall-name">Rojak, Popiah & Cockle</p>
             <p class="stall-time">Waiting Time: 30m</p>
           </article>
         </a>
-        <a href="Second Menu.html" class="stall-link">
+        <a href="Second Menu-guest.html" class="stall-link">
           <article class="stall" data-category="no-veg" data-cuisine="chinese">
             <img src="Stall Images/Tian Tian Hainanese Chicken Rice.webp" alt="Tian Tian Hainanese Chicken Rice">
             <p class="stall-name">Tian Tian Hainanese Chicken Rice</p>
