--- a/home-page-user.html
+++ b/home-page-user.html
@@ -44,10 +44,10 @@
           <div class="collapse navbar-collapse" id="mainNavbar">
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" href="home-page-guest.htmls">Home</a>
+                <a class="nav-link active" href="home-page-user.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="hawker-centers.html">Order</a>
+                <a class="nav-link" href="hawker-centers-user.html">Order</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="customerEng-user.html">Customer Portal</a>
@@ -74,13 +74,13 @@
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="orderTracking.html"
+                    <a class="dropdown-item" href="orderTracking-user.html"
                       >Order Tracking</a
                     >
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="likedItems.html"
+                    <a class="dropdown-item" href="likedItems-user.html"
                       >Liked Items</a
                     >
                   </li>
@@ -124,7 +124,7 @@
                   stall ratings, and see what's open near you.
                 </p>
                 <a
-                  href="hawker-centers.html"
+                  href="hawker-centers-user.html"
                   class="btn btn-outline-primary mt-3 stretched-link"
                 >
                   Find a Centre
@@ -170,7 +170,7 @@
                   meal, and redeem exclusive rewards.
                 </p>
                 <a
-                  href="customerEng.html"
+                  href="customerEng-user.html"
                   class="btn btn-outline-warning text-dark mt-3 stretched-link"
                 >
                   Visit Portal
