--- a/Checkout-guest.html
+++ b/Checkout-guest.html
@@ -26,10 +26,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="Stalls.html">Stalls</a>
+            <a class="nav-link" href="Stalls-guest.html">Stalls</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="checkout.html">Checkout</a>
+            <a class="nav-link active" href="Checkout-guest.html">Checkout</a>
           </li>
         </ul>
       </div>
@@ -39,7 +39,7 @@
   <!-- Main Content -->
   <div class="container mt-5 pt-5">
     <header>
-      <a href="Stalls.html" class="back-link">← Back to Stalls</a>
+      <a href="Stalls-guest.html" class="back-link">← Back to Stalls</a>
       <h1 class="page-title">Checkout</h1>
       <p class="page-subtitle">Review your order</p>
     </header>
@@ -127,6 +127,6 @@
 
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="checkout.js"></script>
+  <script src="Checkout-guest.js"></script>
 </body>
 </html>
