--- a/hawker-centers-guest.html
+++ b/hawker-centers-guest.html
@@ -51,7 +51,7 @@
 
     <h2 class="section-title">Top-Rated Hawker Centers</h2>
     <div class="hawker-container">
-      <a href="Stalls.html" class="hawker-card">
+      <a href="Stalls-guest.html" class="hawker-card">
         <img src="Menu Images/Maxwell Food Centre.webp" alt="Maxwell Food Centre">
         <div class="hawker-info">
           <h3>Maxwell Food Centre</h3>
@@ -60,7 +60,7 @@
         </div>
       </a>
 
-      <a href="Stalls.html" class="hawker-card">
+      <a href="Stalls-guest.html" class="hawker-card">
         <img src="Menu Images/Old Airport Road Food Centre.jpg" alt="Old Airport Road Food Centre">
         <div class="hawker-info">
           <h3>Old Airport Road Food Centre</h3>
@@ -69,7 +69,7 @@
         </div>
       </a>
 
-      <a href="Stalls.html" class="hawker-card">
+      <a href="Stalls-guest.html" class="hawker-card">
         <img src="Menu Images/Lau Pa Sat Food Centre.jpg" alt = "Lau Pa Sat">
         <div class="hawker-info">
           <h3>Lau Pa Sat</h3>
@@ -78,7 +78,7 @@
         </div>
       </a>
 
-      <a href="Stalls.html" class="hawker-card">
+      <a href="Stalls-guest.html" class="hawker-card">
         <img src="Menu Images/Tiong Bahru Market.jpg" alt="Tiong Bahru Market">
         <div class="hawker-info">
           <h3>Tiong Bahru Market</h3>
@@ -87,7 +87,7 @@
         </div>
       </a>
 
-      <a href="Stalls.html" class="hawker-card">
+      <a href="Stalls-guest.html" class="hawker-card">
         <img src="Menu Images/Chomp Chomp Food Centre.png" alt= "Chomp Chomp Food Centre">
         <div class="hawker-info">
           <h3>Chomp Chomp Food Centre</h3>
@@ -96,7 +96,7 @@
         </div>
       </a>
 
-      <a href="Stalls.html" class="hawker-card">
+      <a href="Stalls-guest.html" class="hawker-card">
         <img src="Menu Images/Amoy Food Street Centre.webp" alt="Amoy Street Food Centre">
         <div class="hawker-info">
           <h3>Amoy Street Food Centre</h3>
