--- a/home-page-guest.html
+++ b/home-page-guest.html
@@ -47,7 +47,7 @@
                 <a class="nav-link active" href="home-page-guest.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="hawker-centers.html">Order</a>
+                <a class="nav-link" href="hawker-centers-guest.html">Order</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="customerEng-guest.html">Customer Portal</a>
@@ -74,13 +74,13 @@
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="orderTracking.html"
+                    <a class="dropdown-item" href="orderTracking-guest.html"
                       >Order Tracking</a
                     >
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="likedItems.html"
+                    <a class="dropdown-item" href="likedItems-guest.html"
                       >Liked Items</a
                     >
                   </li>
@@ -175,7 +175,7 @@
                   meal, and redeem exclusive rewards.
                 </p>
                 <a
-                  href="customerEng.html"
+                  href="customerEng-guest.html"
                   class="btn btn-outline-warning text-dark mt-3 stretched-link"
                 >
                   Visit Portal
