--- a/payment-failure-guest.html
+++ b/payment-failure-guest.html
@@ -3,47 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HawkersGo - Order Successful</title>
+    <title>HawkersGo - Payment Failed</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="payment-success.css" />
+    <link rel="stylesheet" href="payment-failure.css" />
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">HawkersGo</a>
+            <a class="navbar-brand fw-bold" href="#">HawkersGo</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="Stalls.html">Stalls</a></li>
-                    <li class="nav-item"><a class="nav-link" href="checkout.html">Checkout</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="checkout.html">Checkout</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <main class="container">
-        <header class="header">
-            <div class="status-icon">
-                <i class="bi bi-check-lg"></i>
+    <main class="container payment-container">
+        <div class="payment-page">
+            <header class="header">
+                <div class="status-icon">
+                    <i class="bi bi-x-lg"></i>
+                </div>
+                <h1>Payment Failed</h1>
+                <p>We couldn't process your transaction.</p>
+            </header>
+
+            <div class="error-box">
+                <p>Reason: Insufficient funds or card declined. Please check your details and try again.</p>
             </div>
-            <h1>Order Successful!</h1>
-            <p>Your payment has been processed.</p>
-        </header>
 
-        <div class="success-box">
-            <p>Order ID: #HG-98231<br>
-            Estimated arrival: 25-30 mins</p>
+            <div class="action-area">
+                <button onclick="window.history.back()" class="btn retry-btn">Try Again</button>
+                <a href="home-page-guest.html" class="home-link">Return to Home</a>
+            </div>
+
+            <footer class="different-card">
+                <p>Having trouble? <a href="#">Use a different card</a></p>
+            </footer>
         </div>
-
-        <a href="orderTracking-user.html".html" class="btn retry-btn success-btn">Track Order</a>
-        <a href="home-page-user.html" class="btn home-btn">Return to Home</a>
-
-        <footer class="form-footer">
-            <p>Need help? <a href="#" class="success-link">Contact Support</a></p>
-        </footer>
     </main>
 
     <footer class="bg-dark text-white py-4 mt-auto">
@@ -54,8 +57,10 @@
                 </div>
                 <div class="col-md-8 text-center text-md-end">
                     <ul class="list-inline mb-0 small">
-                        <li class="list-inline-item me-3">Privacy Policy</li>
-                        <li class="list-inline-item">Terms</li>
+                        <li class="list-inline-item me-3"><a href="#" class="text-white-50 text-decoration-none">Privacy Policy</a></li>
+                        <li class="list-inline-item me-3"><a href="#" class="text-white-50 text-decoration-none">Terms</a></li>
+                        <li class="list-inline-item"><a href="#" class="text-white ms-2"><i class="bi bi-facebook"></i></a></li>
+                        <li class="list-inline-item"><a href="#" class="text-white ms-2"><i class="bi bi-instagram"></i></a></li>
                     </ul>
                 </div>
             </div>
