--- a/vendor-dashboard.html
+++ b/vendor-dashboard.html
@@ -39,6 +39,7 @@
   <br><br><br><br><br>
 
     <h2>Stall Overview</h2>
+    <a href="vendor-menu.html" id="back-btn">← Back</a>
     <section class="card">
         <div class="filter-controls">
             <div class="field">
