--- a/nea-login.html
+++ b/nea-login.html
@@ -32,7 +32,7 @@
             <input type="text" placeholder="User Name" required>
             <input type="password" placeholder="Password" required>
             
-            <button type="submit" class="btn login-btn">Sign in</button>
+            <a class="loginbut" href="nea-inspection.html"> Log In</a>
           
         </form>
     </main>
