updated navbar again

--- a/likedItems-user.html
+++ b/likedItems-user.html
@@ -104,13 +104,15 @@
           <div class="collapse navbar-collapse" id="mainNavbar">
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" href="home-page-guest.html">Home</a>
+                <a class="nav-link" href="home-page-guest.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="hawker-centers.html">Order</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="customerEng-user.html">Customer Portal</a>
+                <a class="nav-link active" href="customerEng-user.html"
+                  >Customer Portal</a
+                >
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -140,15 +142,18 @@
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="likedItems-user.html">Liked Items</a>
+                    <a class="dropdown-item" href="likedItems-user.html"
+                      >Liked Items</a
+                    >
                   </li>
                 </ul>
               </li>
             </ul>
 
             <div class="d-flex align-items-center">
-
-              <a href="main-login.html" class="btn btn-light fw-bold">Log Out</a>
+              <a href="main-login.html" class="btn btn-light fw-bold"
+                >Log Out</a
+              >
             </div>
           </div>
         </div>
