--- a/customerEng-guest.html
+++ b/customerEng-guest.html
@@ -28,7 +28,7 @@
       <!-- place navbar here -->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="home-page-guest.html">
             <span class="ms-2">HawkerGo</span>
           </a>
 
@@ -44,13 +44,15 @@
           <div class="collapse navbar-collapse" id="mainNavbar">
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" href="home-page-guest.html">Home</a>
+                <a class="nav-link" href="home-page-guest.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Order</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="customerEng-guest.html">Customer Portal</a>
+                <a class="nav-link active" href="customerEng-guest.html"
+                  >Customer Portal</a
+                >
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -67,16 +69,15 @@
                   class="dropdown-menu dropdown-menu-dark"
                   aria-labelledby="moreDropdown"
                 >
-               
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="orderTracking.html"
+                    <a class="dropdown-item" href="orderTracking-guest.html"
                       >Order Tracking</a
                     >
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="likedItems.html"
+                    <a class="dropdown-item" href="likedItems-guest.html"
                       >Liked Items</a
                     >
                   </li>
@@ -104,9 +105,8 @@
               href="home-page-guest.html"
               class="text-decoration-none text-dark"
             >
-              <!--link to minglis login page-->
               <img
-                src="cat.jpg"
+                src="imgs/homepageimg.png"
                 class="img-fluid rounded shadow-sm mb-2"
                 alt="Home"
               />
@@ -114,10 +114,11 @@
             </a>
           </div>
 
-          
-
           <div class="col-6 col-md-4">
-            <a href="orderTracking-guest.html" class="text-decoration-none text-dark">
+            <a
+              href="orderTracking-guest.html"
+              class="text-decoration-none text-dark"
+            >
               <img
                 src="imgs/ordertracking.jpg"
                 class="img-fluid rounded shadow-sm mb-2"
@@ -128,7 +129,10 @@
           </div>
 
           <div class="col-6 col-md-4">
-            <a href="vendorsRating-guest.html" class="text-decoration-none text-dark">
+            <a
+              href="vendorsRating-guest.html"
+              class="text-decoration-none text-dark"
+            >
               <img
                 src="imgs/ratings.jpg"
                 class="img-fluid rounded shadow-sm mb-2"
@@ -139,7 +143,10 @@
           </div>
 
           <div class="col-6 col-md-4">
-            <a href="likedItems-guest.html" class="text-decoration-none text-dark">
+            <a
+              href="likedItems-guest.html"
+              class="text-decoration-none text-dark"
+            >
               <img
                 src="imgs/liked items.jpg"
                 class="img-fluid rounded shadow-sm mb-2"
@@ -148,7 +155,6 @@
               <h5 class="fw-bold">Liked Items</h5>
             </a>
           </div>
-
         </div>
       </div>
     </main>
