--- a/vendorsRating-guest.html
+++ b/vendorsRating-guest.html
@@ -44,13 +44,15 @@
           <div class="collapse navbar-collapse" id="mainNavbar">
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" href="home-page-guest.html">Home</a>
+                <a class="nav-link" href="home-page-guest.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="hawker-centers.html">Order</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="customerEng-guest.html">Customer Portal</a>
+                <a class="nav-link active" href="customerEng-guest.html"
+                  >Customer Portal</a
+                >
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -67,7 +69,6 @@
                   class="dropdown-menu dropdown-menu-dark"
                   aria-labelledby="moreDropdown"
                 >
-
                   <li><hr class="dropdown-divider" /></li>
                   <li>
                     <a class="dropdown-item" href="orderTracking-guest.html"
