--- a/customerEng-guest.html
+++ b/customerEng-guest.html
@@ -47,7 +47,7 @@
                 <a class="nav-link" href="home-page-guest.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Order</a>
+                <a class="nav-link" href="hawker-centers-user.html">Order</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="customerEng-guest.html"
