--- a/vendorsRating-user.html
+++ b/vendorsRating-user.html
@@ -47,7 +47,7 @@
                 <a class="nav-link" href="home-page-user.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="hawker-centers.html">Order</a>
+                <a class="nav-link" href="hawker-centers-user.html">Order</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="customerEng-user.html"
