--- a/First Menu-guest.html
+++ b/First Menu-guest.html
@@ -14,14 +14,14 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">HawkersGo</a>
+      <a class="navbar-brand" href="home-page-guest.html">HawkersGo</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="Stalls.html">Stalls</a></li>
-          <li class="nav-item"><a class="nav-link" href="checkout.html">Checkout</a></li>
+          <li class="nav-item"><a class="nav-link" href="Stalls-guest.html">Stalls</a></li>
+          <li class="nav-item"><a class="nav-link" href="checkout-guest.html">Checkout</a></li>
         </ul>
       </div>
     </div>
