--- a/Stalls-user.html
+++ b/Stalls-user.html
@@ -17,14 +17,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">
-        <img
-          src="https://via.placeholder.com/40"
-          alt="Logo"
-          width="40"
-          height="40"
-          class="d-inline-block align-text-top rounded-circle"
-        />
+      <a class="navbar-brand" href="home-page-user.html">
         <span class="ms-2">HawkersGo</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
