--- a/likedItems-guest.html
+++ b/likedItems-guest.html
@@ -83,7 +83,7 @@
     </style>
   </head>
 
-  <body>
+  <body class="d-flex flex-column min-vh-100">
     <header>
       <!-- place navbar here -->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -157,7 +157,7 @@
         </div>
       </nav>
     </header>
-    <main>
+    <main class="flex-grow-1">
       <navigation>
         <div class="container mt-5">
           <div class="row">
