--- a/orderTracking-user.html
+++ b/orderTracking-user.html
@@ -23,7 +23,7 @@
     />
   </head>
 
-  <body>
+  <body class="d-flex flex-column min-vh-100">
     <header>
       <!-- place navbar here -->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -99,7 +99,7 @@
         </div>
       </nav>
     </header>
-    <main>
+    <main class="flex-grow-1">
       <navigation>
         <div class="container mt-5">
           <div class="row">
