fixed home page error for guests

--- a/home-page-guest.html
+++ b/home-page-guest.html
@@ -129,7 +129,7 @@
                   stall ratings, and see what's open near you.
                 </p>
                 <a
-                  href="hawker-centers.html"
+                  href="hawker-centers-guest.html"
                   class="btn btn-outline-primary mt-3 stretched-link"
                 >
                   Find a Centre
