--- a/nea-inspection.html
+++ b/nea-inspection.html
@@ -70,12 +70,12 @@
                         <label for="vendorSelect">Vendor Name</label>
                         <select id="vendorSelect" required>
                             <option value="">Select vendor...</option>
-                            <option value="Hawker Stall #01">Rojak, Popiah & Cockle</option>
-                            <option value="Hawker Stall #02">Tian Tian Hainanese Chicken Rice</option>
-                            <option value="Hawker Stall #03">Oriental Stall</option>
-                            <option value="Hawker Stall #04">Zhen Zhen Porridge</option>
-                            <option value="Hawker Stall #05">Jin Hua Sliced Fish Bee Hoon</option>
-                            <option value="Hawker Stall #06">1980 Penang Prawn Noodle</option>
+                            <option value="Rojak, Popiah & Cockle">Rojak, Popiah & Cockle</option>
+                            <option value="Tian Tian Hainanese Chicken Rice">Tian Tian Hainanese Chicken Rice</option>
+                            <option value="Oriental Stall">Oriental Stall</option>
+                            <option value="Zhen Zhen Porridge">Zhen Zhen Porridge</option>
+                            <option value="Jin Hua Sliced Fish Bee Hoon">Jin Hua Sliced Fish Bee Hoon</option>
+                            <option value="1980 Penang Prawn Noodle">1980 Penang Prawn Noodle</option>
                         </select>
                     </div>
                     <div class="form-row">
