--- a/orderTracking-guest.html
+++ b/orderTracking-guest.html
@@ -77,7 +77,9 @@
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="Liked Items">Liked Items</a>
+                    <a class="dropdown-item" href="likedItems-guest.html"
+                      >Liked Items</a
+                    >
                   </li>
                 </ul>
               </li>
