fixed my linking for the second menu

--- a/Second Menu-guest.html
+++ b/Second Menu-guest.html
@@ -51,7 +51,7 @@
       </section>
 
       <div class="checkout-section">
-        <a href="checkout.html" class="checkout-btn">Go to Checkout 🛒</a>
+        <a href="Checkout-guest.html" class="checkout-btn">Go to Checkout 🛒</a>
       </div>
     </main>
   </div>
