--- a/payment-success-user.html
+++ b/payment-success-user.html
@@ -38,7 +38,7 @@
             Estimated arrival: 25-30 mins</p>
         </div>
 
-        <a href="orderTracking-user.html".html" class="btn retry-btn success-btn">Track Order</a>
+        <a href="orderTracking-user.html".html class="btn retry-btn success-btn">Track Order</a>
         <a href="home-page-user.html" class="btn home-btn">Return to Home</a>
 
         <footer class="form-footer">
