fix nav bar for the ordering part

--- a/hawker-centers-guest.html
+++ b/hawker-centers-guest.html
@@ -33,10 +33,10 @@
         <div class="collapse navbar-collapse" id="mainNavbar">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" href="home-page-guest.html">Home</a>
+              <a class="nav-link" href="home-page-guest.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Order</a>
+              <a class="nav-link active" href="hawker-centers-guest.html">Order</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="customerEng-guest.html"
@@ -195,11 +195,6 @@
               href="#"
               class="text-white text-decoration-none d-flex align-items-center justify-content-center justify-content-md-start"
             >
-              <img
-                src="https://via.placeholder.com/30"
-                alt="Logo"
-                class="rounded-circle"
-              />
               <span class="ms-2 fw-bold">HawkersGo</span>
             </a>
           </div>
