--- a/hawker-centers-user.html
+++ b/hawker-centers-user.html
@@ -15,76 +15,78 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container">
-        <a class="navbar-brand" href="#">
-          <span class="ms-2">HawkerGo</span>
-        </a>
+   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <a class="navbar-brand" href="#">
+            <span class="ms-2">HawkerGo</span>
+          </a>
 
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#mainNavbar"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#mainNavbar"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-        <div class="collapse navbar-collapse" id="mainNavbar">
-          <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" href="home-page-guest.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Order</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="customerEng-guest.html"
-                >Customer Portal</a
-              >
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="moreDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                More
-              </a>
-              <ul
-                class="dropdown-menu dropdown-menu-dark"
-                aria-labelledby="moreDropdown"
-              >
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="orderTracking-user.html"
-                    >Order Tracking</a
-                  >
-                </li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="likedItems-user.html"
-                    >Liked Items</a
-                  >
-                </li>
-              </ul>
-            </li>
-          </ul>
+          <div class="collapse navbar-collapse" id="mainNavbar">
+            <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="home-page-user.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="hawker-centers-user.html">Order</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="customerEng-user.html"
+                  >Customer Portal</a
+                >
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  id="moreDropdown"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  More
+                </a>
+                <ul
+                  class="dropdown-menu dropdown-menu-dark"
+                  aria-labelledby="moreDropdown"
+                >
+                  <li>
+                    <a class="dropdown-item" href="LoyaltyDiscount.html"
+                      >Loyalty & Discount</a
+                    >
+                  </li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <a class="dropdown-item" href="orderTracking-user.html"
+                      >Order Tracking</a
+                    >
+                  </li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <a class="dropdown-item" href="likedItems-user.html"
+                      >Liked Items</a
+                    >
+                  </li>
+                </ul>
+              </li>
+            </ul>
 
-          <div class="d-flex align-items-center">
-            <a
-              href="#"
-              class="btn btn-link text-white text-decoration-none me-3"
-              >Login</a
-            >
-            <a href="#" class="btn btn-light fw-bold">Sign Up</a>
+            <div class="d-flex align-items-center">
+              <a href="main-login.html" class="btn btn-light fw-bold"
+                >Log Out</a
+              >
+            </div>
           </div>
         </div>
-      </div>
-    </nav>
+      </nav>
     <br />
     <br />
     <br />
@@ -195,11 +197,6 @@
               href="#"
               class="text-white text-decoration-none d-flex align-items-center justify-content-center justify-content-md-start"
             >
-              <img
-                src="https://via.placeholder.com/30"
-                alt="Logo"
-                class="rounded-circle"
-              />
               <span class="ms-2 fw-bold">HawkersGo</span>
             </a>
           </div>
