fixed nav bar for stalls

--- a/Stalls-guest.html
+++ b/Stalls-guest.html
@@ -33,10 +33,10 @@
         <div class="collapse navbar-collapse" id="mainNavbar">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" href="home-page-guest.html">Home</a>
+              <a class="nav-link" href="home-page-guest.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Order</a>
+              <a class="nav-link active" href="#">Order</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="customerEng-guest.html"
@@ -110,7 +110,7 @@
           <article class="stall" data-category="veg" data-cuisine="malay">
             <img src="Stall Images/Rojak, Popiah & Cockle.webp" alt="Rojak, Popiah & Cockle">
             <p class="stall-name">Rojak, Popiah & Cockle</p>
-            <p class="stall-time">Waiting Time: 30m</p>
+            <p class="stall-time">Waiting Time: 30m</p> 
           </article>
         </a>
         <a href="Second Menu-guest.html" class="stall-link">
