--- a/Stalls-user.html
+++ b/Stalls-user.html
@@ -36,10 +36,10 @@
                 <a class="nav-link" href="home-page-user.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="hawker-centers-user.html">Order</a>
+                <a class="nav-link active" href="hawker-centers-user.html">Order</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="customerEng-user.html"
+                <a class="nav-link" href="customerEng-user.html"
                   >Customer Portal</a
                 >
               </li>
