reconnected the pages

--- a/pages/Checkout-guest.html
+++ b/pages/Checkout-guest.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="Checkout.css" />
+  <link rel="stylesheet" href="/css/checkout.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -33,13 +33,13 @@
         <div class="collapse navbar-collapse" id="mainNavbar">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" href="home-page-guest.html">Home</a>
+              <a class="nav-link active" href="/pages/home-page-guest.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="#">Order</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="customerEng-guest.html"
+              <a class="nav-link" href="/pages/customerEng-guest.html"
                 >Customer Portal</a
               >
             </li>
@@ -60,13 +60,13 @@
               >
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="orderTracking-guest.html"
+                  <a class="dropdown-item" href="/pages/orderTracking-guest.html"
                     >Order Tracking</a
                   >
                 </li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="likedItems-guest.html"
+                  <a class="dropdown-item" href="/pages/likedItems-guest.html"
                     >Liked Items</a
                   >
                 </li>
@@ -88,7 +88,7 @@
   <!-- Main Content -->
   <div class="container mt-5 pt-5">
     <header>
-      <a href="Stalls-guest.html" class="back-link">← Back to Stalls</a>
+      <a href="/pages/stalls-guest.html" class="back-link">← Back to Stalls</a>
       <h1 class="page-title">Checkout</h1>
       <p class="page-subtitle">Review your order</p>
     </header>
@@ -176,6 +176,6 @@
 
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="Checkout-guest.js"></script>
+  <script src="/pages/checkout-guest.js"></script>
 </body>
 </html>
