--- a/pages/Checkout-user.html
+++ b/pages/Checkout-user.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="Checkout.css" />
+  <link rel="stylesheet" href="/css/checkout.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -33,13 +33,13 @@
           <div class="collapse navbar-collapse" id="mainNavbar">
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="home-page-user.html">Home</a>
+                <a class="nav-link" href="/pages/home-page-user.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="hawker-centers-user.html">Order</a>
+                <a class="nav-link active" href="/pages/hawker-centers-user.html">Order</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="customerEng-user.html"
+                <a class="nav-link" href="/pages/customerEng-user.html"
                   >Customer Portal</a
                 >
               </li>
@@ -59,19 +59,19 @@
                   aria-labelledby="moreDropdown"
                 >
                   <li>
-                    <a class="dropdown-item" href="LoyaltyDiscount.html"
+                    <a class="dropdown-item" href="/pages/loyaltyDiscount.html"
                       >Loyalty & Discount</a
                     >
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="orderTracking-user.html"
+                    <a class="dropdown-item" href="/pages/orderTracking-user.html"
                       >Order Tracking</a
                     >
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="likedItems-user.html"
+                    <a class="dropdown-item" href="/pages/likedItems-user.html"
                       >Liked Items</a
                     >
                   </li>
@@ -80,7 +80,7 @@
             </ul>
 
             <div class="d-flex align-items-center">
-              <a href="main-login.html" class="btn btn-light fw-bold"
+              <a href="/pages/main-login.html" class="btn btn-light fw-bold"
                 >Log Out</a
               >
             </div>
@@ -90,7 +90,7 @@
   <!-- Main Content -->
   <div class="container mt-5 pt-5">
     <header>
-      <a href="Stalls-user.html" class="back-link">← Back to Stalls</a>
+      <a href="/pages/stalls-user.html" class="back-link">← Back to Stalls</a>
       <h1 class="page-title">Checkout</h1>
       <p class="page-subtitle">Review your order</p>
     </header>
@@ -178,6 +178,6 @@
 
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="Checkout-user.js"></script>
+  <script src="/js/checkout-user.js"></script>
 </body>
 </html>
