--- a/pages/add-food-item.html
+++ b/pages/add-food-item.html
@@ -6,12 +6,12 @@
   <title>Add Menu - Vendor Management</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="add-food-item.css">
+  <link rel="stylesheet" href="/css/add-food-item.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="/pages/add-food-item.html">
         HawkersGo
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -20,7 +20,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="main-login.html">Logout</a>
+            <a class="nav-link" href="/pages/main-login.html">Logout</a>
           </li>
         </ul>
       </div>
@@ -120,6 +120,6 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="add-food-item.js"></script>
+  <script src="/js/add-food-item.js"></script>
 </body>
 </html>
