fixed customer engagement file linkings

--- a/pages/Customer/User/customerEng-user.html
+++ b/pages/Customer/User/customerEng-user.html
@@ -108,7 +108,7 @@
               class="text-decoration-none text-dark"
             >
               <img
-                src="imgs/homepageimg.png"
+                src="../../../imgs/homepageimg.png"
                 class="img-fluid rounded shadow-sm mb-2"
                 alt="Home"
               />
@@ -122,7 +122,7 @@
               class="text-decoration-none text-dark"
             >
               <img
-                src="imgs/loyaltypage.png"
+                src="../../../imgs/loyaltypage.png"
                 class="img-fluid rounded shadow-sm mb-2"
                 alt="Order"
               />
@@ -136,7 +136,7 @@
               class="text-decoration-none text-dark"
             >
               <img
-                src="imgs/ordertracking.jpg"
+                src="../../../imgs/ordertracking.jpg"
                 class="img-fluid rounded shadow-sm mb-2"
                 alt="Feedback"
               />
@@ -150,7 +150,7 @@
               class="text-decoration-none text-dark"
             >
               <img
-                src="imgs/ratings.jpg"
+                src="../../../imgs/ratings.jpg"
                 class="img-fluid rounded shadow-sm mb-2"
                 alt="Gallery"
               />
@@ -164,7 +164,7 @@
               class="text-decoration-none text-dark"
             >
               <img
-                src="imgs/liked items.jpg"
+                src="../../../imgs/liked items.jpg"
                 class="img-fluid rounded shadow-sm mb-2"
                 alt="About"
               />
