--- a/pages/Customer/User/orderTracking-user.html
+++ b/pages/Customer/User/orderTracking-user.html
@@ -8,7 +8,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="stylesheet" href="CustomerEng.css" />
+    <link rel="stylesheet" href="../../../css/customerEng.css" />
 
     <!-- Bootstrap CSS v5.2.1 -->
     <link
@@ -252,6 +252,6 @@
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
       crossorigin="anonymous"
     ></script>
-    <script src="orderTracking.js"></script>
+    <script src="../../../js/orderTracking.js"></script>
   </body>
 </html>
