changed linking for cust eng

--- a/pages/Customer/User/customerEng-user.html
+++ b/pages/Customer/User/customerEng-user.html
@@ -174,58 +174,54 @@
         </div>
       </div>
     </main>
-    <footer>
-      <!-- place footer here -->
-      <footer class="bg-dark text-white py-4 mt-5">
-        <div class="container">
-          <div class="row align-items-center">
-            <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
-              <a
-                href="#"
-                class="text-white text-decoration-none d-flex align-items-center justify-content-center justify-content-md-start"
-              >
-                <span class="ms-2 fw-bold">HawkerGo</span>
-              </a>
-            </div>
-
-            <div class="col-md-8 text-center text-md-end">
-              <ul class="list-inline mb-0">
-                <li class="list-inline-item me-3">
-                  <a href="#" class="text-white-50 text-decoration-none"
-                    >Privacy Policy</a
-                  >
-                </li>
-                <li class="list-inline-item me-4">
-                  <a href="#" class="text-white-50 text-decoration-none"
-                    >Terms</a
-                  >
-                </li>
-
-                <li class="list-inline-item">
-                  <a href="#" class="text-white ms-2"
-                    ><i class="bi bi-facebook"></i>FB</a
-                  >
-                </li>
-                <li class="list-inline-item">
-                  <a href="#" class="text-white ms-2"
-                    ><i class="bi bi-instagram"></i>IG</a
-                  >
-                </li>
-                <li class="list-inline-item">
-                  <a href="#" class="text-white ms-2"
-                    ><i class="bi bi-twitter-x"></i>X</a
-                  >
-                </li>
-              </ul>
-            </div>
+    <!-- place footer here -->
+    <footer class="bg-dark text-white py-4 mt-5">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
+            <a
+              href="#"
+              class="text-white text-decoration-none d-flex align-items-center justify-content-center justify-content-md-start"
+            >
+              <span class="ms-2 fw-bold">HawkerGo</span>
+            </a>
           </div>
 
-          <hr class="mt-4 border-secondary" />
-          <div class="text-center text-white-50 small">
-            &copy; 2026 MyBrand. All rights reserved.
+          <div class="col-md-8 text-center text-md-end">
+            <ul class="list-inline mb-0">
+              <li class="list-inline-item me-3">
+                <a href="#" class="text-white-50 text-decoration-none"
+                  >Privacy Policy</a
+                >
+              </li>
+              <li class="list-inline-item me-4">
+                <a href="#" class="text-white-50 text-decoration-none">Terms</a>
+              </li>
+
+              <li class="list-inline-item">
+                <a href="#" class="text-white ms-2"
+                  ><i class="bi bi-facebook"></i>FB</a
+                >
+              </li>
+              <li class="list-inline-item">
+                <a href="#" class="text-white ms-2"
+                  ><i class="bi bi-instagram"></i>IG</a
+                >
+              </li>
+              <li class="list-inline-item">
+                <a href="#" class="text-white ms-2"
+                  ><i class="bi bi-twitter-x"></i>X</a
+                >
+              </li>
+            </ul>
           </div>
         </div>
-      </footer>
+
+        <hr class="mt-4 border-secondary" />
+        <div class="text-center text-white-50 small">
+          &copy; 2026 MyBrand. All rights reserved.
+        </div>
+      </div>
     </footer>
     <!-- Bootstrap JavaScript Libraries -->
     <script
@@ -239,5 +235,8 @@
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
       crossorigin="anonymous"
     ></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+    <script src="firebase-init.js"></script>
   </body>
 </html>
