--- a/pages/Customer/User/vendorsRating-user.html
+++ b/pages/Customer/User/vendorsRating-user.html
@@ -307,5 +307,8 @@
     ></script>
     <script src="../../../js/vendors.js"></script>
     <script src="../../../js/vendorsRating.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+    <script src="firebase-init.js"></script>
   </body>
 </html>
