--- a/pages/Customer/User/LoyaltyDiscount.html
+++ b/pages/Customer/User/LoyaltyDiscount.html
@@ -370,5 +370,8 @@
       crossorigin="anonymous"
     ></script>
     <script src="../../../js/loyaltydiscount.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+    <script src="firebase-init.js"></script>
   </body>
 </html>
