--- a/pages/Customer/User/likedItems-user.html
+++ b/pages/Customer/User/likedItems-user.html
@@ -277,5 +277,8 @@
       crossorigin="anonymous"
     ></script>
     <script src="Menu.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+    <script src="firebase-init.js"></script>
   </body>
 </html>
