--- a/pages/Customer/User/orderTracking-user.html
+++ b/pages/Customer/User/orderTracking-user.html
@@ -253,5 +253,8 @@
       crossorigin="anonymous"
     ></script>
     <script src="../../../js/orderTracking.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+    <script src="firebase-init.js"></script>
   </body>
 </html>
