edited the home-pages

--- a/pages/Customer/User/home-page-user.html
+++ b/pages/Customer/User/home-page-user.html
@@ -89,7 +89,7 @@
             </ul>
 
             <div class="d-flex align-items-center">
-              <a href="main-login.html" class="btn btn-light fw-bold">Log Out</a>
+              <a href="/pages/Login and Signup/main-login.html" class="btn btn-light fw-bold">Log Out</a>
             </div>
           </div>
         </div>
