--- a/pages/Customer/Guest/home-page-guest.html
+++ b/pages/Customer/Guest/home-page-guest.html
@@ -90,11 +90,11 @@
 
             <div class="d-flex align-items-center">
               <a
-                href="main-login.html"
+                href="/pages/Login and Signup/main-login.html"
                 class="btn btn-link text-white text-decoration-none me-3"
                 >Login</a
               >
-              <a href="signup-account-type.html" class="btn btn-light fw-bold">Sign Up</a>
+              <a href="/pages/Login and Signup/signup-account-type.html" class="btn btn-light fw-bold">Sign Up</a>
             </div>
           </div>
         </div>
