--- a/pages/Customer/Guest/customerEng-guest.html
+++ b/pages/Customer/Guest/customerEng-guest.html
@@ -106,7 +106,7 @@
               class="text-decoration-none text-dark"
             >
               <img
-                src="imgs/homepageimg.png"
+                src="/imgs/homepageimg.png"
                 class="img-fluid rounded shadow-sm mb-2"
                 alt="Home"
               />
@@ -120,7 +120,7 @@
               class="text-decoration-none text-dark"
             >
               <img
-                src="imgs/ordertracking.jpg"
+                src="/imgs/ordertracking.jpg"
                 class="img-fluid rounded shadow-sm mb-2"
                 alt="Feedback"
               />
@@ -134,7 +134,7 @@
               class="text-decoration-none text-dark"
             >
               <img
-                src="imgs/ratings.jpg"
+                src="/imgs/ratings.jpg"
                 class="img-fluid rounded shadow-sm mb-2"
                 alt="Gallery"
               />
@@ -148,7 +148,7 @@
               class="text-decoration-none text-dark"
             >
               <img
-                src="imgs/liked items.jpg"
+                src="/imgs/liked items.jpg"
                 class="img-fluid rounded shadow-sm mb-2"
                 alt="About"
               />
