--- a/pages/Customer/Guest/likedItems-guest.html
+++ b/pages/Customer/Guest/likedItems-guest.html
@@ -21,6 +21,12 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
+      rel="stylesheet"
+    />
     <style>
       .liked-items {
         margin-left: 250px;
@@ -86,7 +92,10 @@
   <body class="d-flex flex-column min-vh-100">
     <header>
       <!-- place navbar here -->
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <nav
+        class="navbar navbar-expand-lg navbar-dark fixed-top"
+        style="background: #305652; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2)"
+      >
         <div class="container">
           <a class="navbar-brand" href="#">
             <span class="ms-2">HawkerGo</span>
@@ -158,6 +167,7 @@
       </nav>
     </header>
     <main class="flex-grow-1">
+      <br />
       <navigation>
         <div class="container mt-5">
           <div class="row">
@@ -209,7 +219,10 @@
       </section>
     </main>
     <!-- place footer here -->
-    <footer class="bg-dark text-white py-4 mt-5">
+    <footer
+      class="text-white py-4 mt-5"
+      style="background: #305652; box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.2)"
+    >
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
@@ -269,6 +282,10 @@
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
       crossorigin="anonymous"
     ></script>
-    <script src="Menu.js"></script>
+    <script src="js/Menu.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+
+    <script src="/js/firebase-init.js"></script>
   </body>
 </html>
