--- a/pages/Customer/Guest/orderTracking-guest.html
+++ b/pages/Customer/Guest/orderTracking-guest.html
@@ -9,7 +9,12 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <link rel="stylesheet" href="CustomerEng.css" />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
+      rel="stylesheet"
+    />
     <!-- Bootstrap CSS v5.2.1 -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -26,7 +31,10 @@
   <body class="d-flex flex-column min-vh-100">
     <header>
       <!-- place navbar here -->
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <nav
+        class="navbar navbar-expand-lg navbar-dark fixed-top"
+        style="background: #305652; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2)"
+      >
         <div class="container">
           <a class="navbar-brand" href="#">
             <span class="ms-2">HawkerGo</span>
@@ -50,7 +58,7 @@
                 <a class="nav-link" href="hawker-centers-guest.html">Order</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="customerEng.html"
+                <a class="nav-link active" href="customerEng-guest.html"
                   >Customer Portal</a
                 >
               </li>
@@ -98,6 +106,7 @@
       </nav>
     </header>
     <main class="flex-grow-1">
+      <br />
       <navigation>
         <div class="container mt-5">
           <div class="row">
@@ -184,7 +193,10 @@
       </div>
     </div>
     <!-- place footer here -->
-    <footer class="bg-dark text-white py-4 mt-5">
+    <footer
+      class="text-white py-4 mt-5"
+      style="background: #305652; box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.2)"
+    >
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
@@ -245,5 +257,9 @@
       crossorigin="anonymous"
     ></script>
     <script src="orderTracking.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+
+    <script src="/js/firebase-init.js"></script>
   </body>
 </html>
