--- a/pages/Customer/User/hawker-centers-user.html
+++ b/pages/Customer/User/hawker-centers-user.html
@@ -15,78 +15,78 @@
     />
   </head>
   <body>
-   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-          <a class="navbar-brand" href="#">
-            <span class="ms-2">HawkerGo</span>
-          </a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <span class="ms-2">HawkerGo</span>
+        </a>
 
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#mainNavbar"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#mainNavbar"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-          <div class="collapse navbar-collapse" id="mainNavbar">
-            <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="home-page-user.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="hawker-centers-user.html">Order</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="customerEng-user.html"
-                  >Customer Portal</a
-                >
-              </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  id="moreDropdown"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  More
-                </a>
-                <ul
-                  class="dropdown-menu dropdown-menu-dark"
-                  aria-labelledby="moreDropdown"
-                >
-                  <li>
-                    <a class="dropdown-item" href="LoyaltyDiscount.html"
-                      >Loyalty & Discount</a
-                    >
-                  </li>
-                  <li><hr class="dropdown-divider" /></li>
-                  <li>
-                    <a class="dropdown-item" href="orderTracking-user.html"
-                      >Order Tracking</a
-                    >
-                  </li>
-                  <li><hr class="dropdown-divider" /></li>
-                  <li>
-                    <a class="dropdown-item" href="likedItems-user.html"
-                      >Liked Items</a
-                    >
-                  </li>
-                </ul>
-              </li>
-            </ul>
-
-            <div class="d-flex align-items-center">
-              <a href="main-login.html" class="btn btn-light fw-bold"
-                >Log Out</a
+        <div class="collapse navbar-collapse" id="mainNavbar">
+          <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="home-page-user.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="hawker-centers-user.html"
+                >Order</a
               >
-            </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="customerEng-user.html"
+                >Customer Portal</a
+              >
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="moreDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                More
+              </a>
+              <ul
+                class="dropdown-menu dropdown-menu-dark"
+                aria-labelledby="moreDropdown"
+              >
+                <li>
+                  <a class="dropdown-item" href="LoyaltyDiscount.html"
+                    >Loyalty & Discount</a
+                  >
+                </li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="orderTracking-user.html"
+                    >Order Tracking</a
+                  >
+                </li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="likedItems-user.html"
+                    >Liked Items</a
+                  >
+                </li>
+              </ul>
+            </li>
+          </ul>
+
+          <div class="d-flex align-items-center">
+            <a href="main-login.html" class="btn btn-light fw-bold">Log Out</a>
           </div>
         </div>
-      </nav>
+      </div>
+    </nav>
     <br />
     <br />
     <br />
@@ -95,7 +95,7 @@
     <div class="container">
       <h1 class="title">🏬 Hawker Centers</h1>
 
-      <form class = "search-box">
+      <form class="search-box">
         <div class="search-input">
           <svg
             width="20"
@@ -111,7 +111,7 @@
           <input
             type="text"
             name="search"
-            id = "searchInput"
+            id="searchInput"
             placeholder="Browse hawker centers and select one to view stalls"
           />
         </div>
@@ -231,6 +231,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src = "hawker-centers.js"></script>
+    <script src="hawker-centers.js"></script>
   </body>
 </html>
