updated making of customer
when creating user, users will be given 0 points

--- a/pages/Customer/Guest/customerEng-guest.html
+++ b/pages/Customer/Guest/customerEng-guest.html
@@ -94,11 +94,15 @@
             </ul>
             <div class="d-flex align-items-center">
               <a
-                href="#"
+                href="/pages/Login and Signup/main-login.html"
                 class="btn btn-link text-white text-decoration-none me-3"
                 >Login</a
               >
-              <a href="#" class="btn btn-light fw-bold">Sign Up</a>
+              <a
+                href="/pages/Login and Signup/signup-account-type.html"
+                class="btn btn-light fw-bold"
+                >Sign Up</a
+              >
             </div>
           </div>
         </div>
