--- a/pages/Customer/Guest/Checkout-guest.html
+++ b/pages/Customer/Guest/Checkout-guest.html
@@ -88,7 +88,7 @@
   <!-- Main Content -->
   <div class="container mt-5 pt-5">
     <header>
-      <a href="/pages/stalls-guest.html" class="back-link">← Back to Stalls</a>
+      <a href="second-menu-guest.html" class="back-link">← Back to Stalls</a>
       <h1 class="page-title">Checkout</h1>
       <p class="page-subtitle">Review your order</p>
     </header>
