--- a/pages/Customer/User/Checkout-user.html
+++ b/pages/Customer/User/Checkout-user.html
@@ -90,7 +90,7 @@
   <!-- Main Content -->
   <div class="container mt-5 pt-5">
     <header>
-      <a href="/pages/stalls-user.html" class="back-link">← Back to Stalls</a>
+      <a href="Second Menu-user.html" class="back-link">← Back to Stalls</a>
       <h1 class="page-title">Checkout</h1>
       <p class="page-subtitle">Review your order</p>
     </header>
@@ -178,6 +178,11 @@
 
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="/js/checkout-user.js"></script>
+
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+  <script src="firebase-init.js"></script>
+
+  <script src="/js/Checkout-user.js"></script>
 </body>
 </html>
