--- a/pages/Customer/User/payment-success-user.html
+++ b/pages/Customer/User/payment-success-user.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HawkersGo - Order Successful</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="payment-success.css" />
+    <link rel="stylesheet" href="/css/payment-success.css" />
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
@@ -34,11 +36,11 @@
         </header>
 
         <div class="success-box">
-            <p>Order ID: #HG-98231<br>
-            Estimated arrival: 25-30 mins</p>
+            <p>Order ID: <span id="displayOrderId" class="fw-bold">Generating...</span><br>
+                Estimated arrival: 25-30 mins</p>
         </div>
 
-        <a href="orderTracking-user.html".html class="btn retry-btn success-btn">Track Order</a>
+        <a href="orderTracking-user.html" .html class="btn retry-btn success-btn">Track Order</a>
         <a href="home-page-user.html" class="btn home-btn">Return to Home</a>
 
         <footer class="form-footer">
@@ -67,5 +69,12 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+    <script src="firebase-init.js"></script>
+
+    <script src="/js/payment-success.js"></script>
+
 </body>
+
 </html>
