fixed stalls.css checkout-guest.html, stalls-guest .html and hawker-centers-guest.html

--- a/pages/Customer/Guest/Checkout-guest.html
+++ b/pages/Customer/Guest/Checkout-guest.html
@@ -33,13 +33,13 @@
         <div class="collapse navbar-collapse" id="mainNavbar">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" href="/pages/home-page-guest.html">Home</a>
+              <a class="nav-link" href="/pages/Customer/Guest/home-page-guest.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="#">Order</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/pages/customerEng-guest.html"
+              <a class="nav-link" href="/pages/Customer/Guest/customerEng-guest.html"
                 >Customer Portal</a
               >
             </li>
@@ -60,7 +60,7 @@
               >
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="/pages/orderTracking-guest.html"
+                  <a class="dropdown-item" href="/pages/Customer/Guest/customerEng-guest.html"
                     >Order Tracking</a
                   >
                 </li>
@@ -88,7 +88,7 @@
   <!-- Main Content -->
   <div class="container mt-5 pt-5">
     <header>
-      <a href="/pages/stalls-guest.html" class="back-link">← Back to Stalls</a>
+      <a href="/pages/Customer/Guest/Stalls-guest.html" class="back-link">← Back to Stalls</a>
       <h1 class="page-title">Checkout</h1>
       <p class="page-subtitle">Review your order</p>
     </header>
