--- a/pages/Customer/Guest/hawker-centers-guest.html
+++ b/pages/Customer/Guest/hawker-centers-guest.html
@@ -8,7 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="hawker-centers.css" />
+    <link rel="stylesheet" href="/css/hawker-centers.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
       rel="stylesheet"
@@ -119,7 +119,7 @@
       <div class="hawker-container">
         <a href="Stalls-guest.html" class="hawker-card">
           <img
-            src="Menu Images/Maxwell Food Centre.webp"
+            src="/imgs/Maxwell Food Centre.webp"
             alt="Maxwell Food Centre"
           />
           <div class="hawker-info">
@@ -131,7 +131,7 @@
 
         <a href="Stalls-guest.html" class="hawker-card">
           <img
-            src="Menu Images/Old Airport Road Food Centre.jpg"
+            src="/imgs/Old Airport Road Food Centre.jpg"
             alt="Old Airport Road Food Centre"
           />
           <div class="hawker-info">
@@ -142,7 +142,7 @@
         </a>
 
         <a href="Stalls-guest.html" class="hawker-card">
-          <img src="Menu Images/Lau Pa Sat Food Centre.jpg" alt="Lau Pa Sat" />
+          <img src="/imgs/Lau Pa Sat Food Centre.jpg" alt="Lau Pa Sat" />
           <div class="hawker-info">
             <h3>Lau Pa Sat</h3>
             <p class="location">📍 Downtown Core, Central</p>
@@ -152,7 +152,7 @@
 
         <a href="Stalls-guest.html" class="hawker-card">
           <img
-            src="Menu Images/Tiong Bahru Market.jpg"
+            src="/imgs/Tiong Bahru Market.jpg"
             alt="Tiong Bahru Market"
           />
           <div class="hawker-info">
@@ -164,7 +164,7 @@
 
         <a href="Stalls-guest.html" class="hawker-card">
           <img
-            src="Menu Images/Chomp Chomp Food Centre.png"
+            src="/imgs/Chomp Chomp Food Centre.png"
             alt="Chomp Chomp Food Centre"
           />
           <div class="hawker-info">
@@ -176,7 +176,7 @@
 
         <a href="Stalls-guest.html" class="hawker-card">
           <img
-            src="Menu Images/Amoy Food Street Centre.webp"
+            src="/imgs/Amoy Food Street Centre.webp"
             alt="Amoy Street Food Centre"
           />
           <div class="hawker-info">
@@ -229,6 +229,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src = "hawker-centers.js"></script>
+    <script src = "/js/hawker-centers.js"></script>
   </body>
 </html>
